// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android withDivider should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderColor": "rgb(221, 221, 229)",
        "borderRadius": 4,
        "borderWidth": 1,
      },
      Object {
        "padding": 16,
      },
      Array [
        Object {
          "flexDirection": "row",
        },
      ],
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgb(68, 69, 96)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0.12,
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(221, 221, 229)",
          "flexDirection": "column",
          "width": 1,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgb(68, 69, 96)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0.12,
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
</View>
`;

exports[`Android withDivider should render correctly with arbitrary props 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderColor": "rgb(221, 221, 229)",
        "borderRadius": 4,
        "borderWidth": 1,
      },
      Object {
        "padding": 16,
      },
      Array [
        Object {
          "flexDirection": "row",
        },
      ],
    ]
  }
  testID="arbitrary value"
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgb(68, 69, 96)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0.12,
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(221, 221, 229)",
          "flexDirection": "column",
          "width": 1,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgb(68, 69, 96)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0.12,
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
</View>
`;

exports[`Android withDivider should render correctly with custom main style 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderColor": "rgb(221, 221, 229)",
        "borderRadius": 4,
        "borderWidth": 1,
      },
      Object {
        "padding": 16,
      },
      Array [
        Object {
          "flexDirection": "row",
        },
      ],
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "flex": 2,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgb(68, 69, 96)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0.12,
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(221, 221, 229)",
          "flexDirection": "column",
          "width": 1,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgb(68, 69, 96)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0.12,
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
</View>
`;

exports[`Android withDivider should render correctly with custom stub style 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderColor": "rgb(221, 221, 229)",
        "borderRadius": 4,
        "borderWidth": 1,
      },
      Object {
        "padding": 16,
      },
      Array [
        Object {
          "flexDirection": "row",
        },
      ],
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgb(68, 69, 96)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0.12,
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(221, 221, 229)",
          "flexDirection": "column",
          "width": 1,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "flex": 3,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgb(68, 69, 96)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0.12,
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
</View>
`;

exports[`Android withDivider should render correctly without padding 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderColor": "rgb(221, 221, 229)",
        "borderRadius": 4,
        "borderWidth": 1,
      },
      Array [
        Object {
          "flexDirection": "row",
        },
      ],
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgb(68, 69, 96)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0.12,
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(221, 221, 229)",
          "flexDirection": "column",
          "width": 1,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgb(68, 69, 96)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0.12,
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
</View>
`;
